--- a/scss/components/_productos.scss
+++ b/scss/components/_productos.scss
@@ -10,7 +10,7 @@
     margin: 25px;
 }
 
-.porducto{
+.porduct{
     padding: 8px;
 
 
@@ -21,7 +21,7 @@
 }
 }
 
-.porducto img {
+.porduct img {
     width: 300px;
     height: 350px;
 }
